2007-01-30  Patrick van Staveren  <trick@vanstaveren.us>

	* src/*: moved everything to a new namespace,
	Gphoto2.Base and moved all files into subdir.

	* configure.ac: bump to 2.3.99.0.trunk.

	* NEWS, TODO: updated.

	* src/en/*: updated docs for new namespace.

	* src/Makefile.am: fixed up doc updater.

	* src/Base/CameraFile.cs: fd method uses a UnixStream
	rather than a raw integer.

2007-01-23  Patrick van Staveren  <trick@vanstaveren.us>

	* src/CameraFilesystem.cs: retab

2007-01-19  Patrick van Staveren  <trick@vanstaveren.us>

	* TODO: updated.

	* libgphoto2-sharp.md{s,p}: added MD project/solution.

	* src/Camera.cs: more changes to GetStorageInformation,
	it should work for >1 storage device now.

2007-01-18  Patrick van Staveren  <trick@vanstaveren.us>

	* src/*: move DllLoader lines to end of classes.
	
	* src/todo: updated

	* src/TestGPhoto2Sharp.cs: wrap it all in an exception handler
	and return 1 on failure.  Also add use System and clean up.

	* NEWS: updated

	* src/Makefile.am: delete libgphoto2-sharp-docs.{tree,zip} on
	`make clean`

	* moved src/todo to ./TODO

2007-01-17  Patrick van Staveren  <trick@vanstaveren.us>

	* src/todo-formatting renamed to todo.

	* src/CameraFilesystem.cs: cleaned up old sizing comments.

	* src/CameraFile.cs: changed parameter to be a fd integer.

	* src/*: vim:retab

2007-01-15  Patrick van Staveren  <trick@vanstaveren.us>

	* configure.ac: Bump to 2.3.1.2.trunk

	* src/{en/*, libgphoto2-sharp-docs.source, Makefile.am}, configure.ac:
	add in monodoc generation, and initial (uncommented) docs.

	* shamrock/: svn:ignore Makefile

	* src/Camera.cs, src/testsizes-typelist.txt: added
	CameraStorageInformation API.  Currently will only return info for
	first storage device.  Experimental.  Lightly tested.

	* src/{Camera, CameraAbilitiesList}.cs: Formatting: move DllLoader
	lines to bottom.

	* src/todo-formatting.txt: temp tracking file for formatting.

2006-12-30  Patrick van Staveren  <trick@vanstaveren.us>
