@@ -1,0 +1,10 @@
+using System;
+using System.Collections.Generic;
+
+namespace Gphoto2
+{
+    public class File : Base.CameraFile
+    {
+        public File () { }
+    }
+}
