@@ -13,19 +13,22 @@
 #
 # This Makefile.am relies on a few variables defined in configure.in.
 
-LIBGPHOTO2_SHARP_CSFILES =				\
+LIBGPHOTO2_SHARP_CSFILES =					\
 	$(srcdir)/Base/Camera.cs				\
-	$(srcdir)/Base/CameraAbilitiesList.cs		\
+	$(srcdir)/Base/CameraAbilitiesList.cs			\
 	$(srcdir)/Base/CameraFile.cs				\
 	$(srcdir)/Base/CameraFilesystem.cs			\
 	$(srcdir)/Base/CameraList.cs				\
-	$(srcdir)/Base/CameraWidget.cs			\
+	$(srcdir)/Base/CameraWidget.cs				\
 	$(srcdir)/Base/Context.cs				\
 	$(srcdir)/Base/ErrorCodes.cs				\
 	$(srcdir)/Base/Object.cs				\
-	$(srcdir)/Base/Port.cs				\
+	$(srcdir)/Base/Port.cs					\
 	$(srcdir)/Base/PortInfo.cs				\
-	$(srcdir)/Base/PortInfoList.cs
+	$(srcdir)/Base/PortInfoList.cs				\
+								\
+	$(srcdir)/Camera.cs					\
+	$(srcdir)/File.cs
 
 MCSFLAGS = -unsafe -debug -r:Mono.Posix
 
