@@ -1,3 +1,15 @@
+2007-01-31  Patrick van Staveren  <trick@vanstaveren.us>
+
+	* src/{File,Camera,Detector}.cs: Starting to prototype fully OO
+	classes.
+
+	* configure.ac: Use gmcs rather than mcs, to give us .NET 2.0
+	features (collections, for one).  Both Banshee and F-Spot use 2.0
+	anyway, so this won't be an issue but will provide us with a few
+	extra features.
+
+	* NEWS: updated
+
 2007-01-30  Patrick van Staveren  <trick@vanstaveren.us>
 
 	* src/*: moved everything to a new namespace,
